--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,20 +21,20 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  select_form_field: ^1.1.0
-  flutter_gen: ^1.3.1
+  select_form_field: ^2.0.0
+  flutter_gen: ^3.1.1
   flutter_slidable:
   flutter:
     sdk: flutter
   flutter_icons: ^1.0.0+1
   custom_navigator: ^0.3.0
-  image_picker: ^0.6.7+17
-  http: ^0.12.2
-  shared_preferences: ^0.5.12+4
-  date_time_format: ^1.1.0
-  intl: ^0.16.1
-  dio: ^3.0.10
+  http: ^0.13.1
+  shared_preferences: ^2.0.5
+  date_time_format: ^2.0.1
+  intl: ^0.17.0
+  dio: ^4.0.0
   cupertino_icons: ^1.0.2
+  image_picker: ^0.7.4
 
 dev_dependencies:
   flutter_test:
